Overflow fixed

--- a/myapp/static/myapp/css/Home.css
+++ b/myapp/static/myapp/css/Home.css
@@ -8,6 +8,7 @@
         body {
             background-color: #f5f7fa;
             display: flex;
+            overflow-x: hidden;
         }
 
         iframe {
