--- a/myapp/static/myapp/css/helpstyle.css
+++ b/myapp/static/myapp/css/helpstyle.css
@@ -3,12 +3,12 @@ html, body {
   padding: 0;
   overflow-x: hidden;
 }
-
-.main-content {
+.main-container
+{
   flex: 1;
-  min-height: 0;        /* 👈 prevents flex child overflow */
-  overflow-y: auto;      /* only this scrolls */
-  overflow-x: hidden;
+  width: 100%;
+  overflow-x: visible;
+
 }
 .topsection
 {
@@ -127,8 +127,6 @@ flex: 1;
 .arrow {
   transition: transform 0.3s ease;
 }
-
-
 
 
 .faq-answer {
