--- a/myapp/static/myapp/css/review.css
+++ b/myapp/static/myapp/css/review.css
@@ -1,7 +1,8 @@
 
 body {   
     padding: 0;
-    font-family: 'Inter', sans-serif;   
+    font-family: 'Inter', sans-serif;  
+    overflow-x: hidden; 
 }
 .review-page{
     margin: 20px 0px 20px 20px;
